Scope bottom offset fix to mobile breakpoint only
Wrap the -1px overlap in media-breakpoint-down(sm) so it only applies
when the bottom bar is actually visible, avoiding -1px on larger screens.

--- a/src/Recollections.Blazor.UI/wwwroot/css/site.scss
+++ b/src/Recollections.Blazor.UI/wwwroot/css/site.scss
@@ -52,7 +52,9 @@ body {
 }
 
 .offcanvas-bottom {
-    bottom: calc(var(--blz-bottom-bar-height) - 1px); // Duplicated for .offcanvas-bottom-to-end
+    @include media-breakpoint-down(sm) {
+        bottom: calc(var(--blz-bottom-bar-height) - 1px); // Duplicated for .offcanvas-bottom-to-end
+    }
 }
 
 .offcanvas-start {
